# Alincode

./: .gitignore  CLAUDE.md  anthropic_provider.py  config.example.yaml  main.py  openai_provider.py  provider.py  pyproject.toml  requirements.txt
Alincode/: __init__.py  __main__.py  agent.py  app.py  askuser_dialog.py  cache.py  client.py  config.py  config_protocol.py  conversation.py  driver.py  permission_dialog.py  plan_dialog.py  prompts.py  remote.py  runtime.py  serialization.py  session_dialog.py  styles.tcss  teammate_tree.py  validator.py  web_content.py
Alincode/agents/: __init__.py
Alincode/commands/: __init__.py
Alincode/compact/: __init__.py  compact.py  const.py  layer1.py  layer2.py  recovery.py  state.py  summary_prompt.py  token.py
Alincode/context/: __init__.py
Alincode/filehistory/: __init__.py
Alincode/hook/: __init__.py  engine.py  event.py  executor.py  loader.py  matcher.py  rule.py
Alincode/hooks/: __init__.py
Alincode/instructions/: __init__.py
Alincode/mcp/: __init__.py  config.py  manager.py  tool.py
Alincode/memory/: __init__.py  manager.py  prompts.py  store.py  types.py
Alincode/permission/: __init__.py  blacklist.py  config_loader.py  engine.py  rules.py  (+2 more)
tests/: test_agent.py  test_config.py  test_conversation.py  test_hook_engine.py  test_hook_executor.py  test_hook_loader.py  test_instructions.py  test_matcher.py  test_mcp_config.py  test_mcp_tool.py  test_memory.py  test_permission.py  test_ptl.py  test_session.py  test_skills.py  test_tool.py
tui/: app.py  chat_area.py  input_area.py  status_bar.py  styles.py
(+39 files in other folders)
